# xhs-mcp

./: .gitignore  README.md  SKILL.md  pyproject.toml  server.py
.github/workflows/: ci.yml
config/: settings.py
tests/: test_browser_permissions.py  test_cache.py  test_client.py  test_cookie_import.py  test_handlers.py  test_sign.py
xhs/: __init__.py  browser.py  cache.py  client.py  cookie_import.py  handlers.py  login.py  models.py  sign.py
